--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>Flask app</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+    </head>
 <head>
     <title>My Webpage</title>
 </head>
