static file added

--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -5,11 +5,11 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     </head>
 <head>
-    <title>My Webpage</title>
+    <title>Cool Solar Systems</title>
 </head>
 <body>
     
-    <h1>My Webpage</h1>
+    <h1>Cool Solar Systems</h1>
 
     {% for planet in planets%}
     <h2>{{planet.name}}</h>
